<resources>
    <string name="app_name">My Justice</string>
    <string name="login_id_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="register_nickname_hint">닉네임</string>
    <string name="register_name_hint">이름</string>
    <string name="ask_no_id_string">아직 아이디가 없으신가요?</string>
    <string name="register_normal_text_string">
        <u>계정 만들기</u>
    </string>
    <string name="register_lawmaker_text_string">
        <u>국회의원 계정 만들기</u>
    </string>
    <string name="if_lawmaker_string">국회의원이시라면</string>
    <string name="error_message_for_network_unavailable">네트워크 연결이 불안정 합니다. \n나중에 다시 시도해주세요.</string>
    <string name="register_success_message1">가입에 성공하셨습니다!</string>
    <string name="register_success_message2">지금부터 저희의 서비스를 이용가능합니다.</string>
    <string name="register_button_text">회원가입</string>
    <string name="select_job_text">사회적 지위 선택하기</string>
    <string name="confirm_text">확인</string>
    <string name="login_fail_message">로그인에 실패하였습니다. \n아이디 혹은 비밀번호를 확인해주세요.</string>
    <string name="login_success_message">로그인에 성공하였습니다.</string>
    <string name="write_article_title">제목</string>
    <string name="write_article_btn_string">글쓰기</string>
    <string name="write_article_select_job_text1">연관된 사회적 지위 1</string>
    <string name="write_article_select_job_text2">연관된 사회적 지위 2</string>
    <string name="write_article_success_message">글 쓰기에 성공하였습니다.</string>
    <string name="write_article_fail_message">글 쓰기에 실패하였습니다. 서버 오류.</string>
    <string name="write_reply_btn_string">댓글쓰기</string>
    <string name="write_reply_success_message">댓글 달기에 성공하였습니다.</string>
    <string name="write_reply_fail_message">댓글 달기에 실패하였습니다. 서버 오류.</string>
</resources>
