<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegisterNormalActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_account_circle_black_24dp" />

            <EditText
                android:id="@+id/idText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:width="280dp"
                android:drawableStart="@drawable/ic_mail_outline_black_24dp"
                android:hint="@string/login_id_hint"
                android:inputType="text"
                android:padding="10dp"
                android:privateImeOptions="defaultInputmode=english" />

            <EditText
                android:id="@+id/passwordText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:width="280dp"
                android:drawableStart="@drawable/ic_lock_black_24dp"
                android:hint="@string/login_password_hint"
                android:inputType="textPassword"
                android:padding="10dp" />

            <EditText
                android:id="@+id/nameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:width="280dp"
                android:drawableStart="@drawable/ic_person_black_24dp"
                android:hint="@string/register_name_hint"
                android:inputType="text"
                android:padding="10dp"
                android:privateImeOptions="defaultInputmode=korean" />

            <Button
                android:id="@+id/registerLawmakerButton"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_button"
                android:text="@string/register_button_text"
                android:textColor="#ffffff"
                android:textSize="20dp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>