<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.WriteArticleActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/write_article_title"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:textSize="18dp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/writeArticleTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:width="270dp"
                android:inputType="text"
                android:padding="10dp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="10dp"
            android:drawableStart="@drawable/ic_domain_black_24dp"
            android:paddingLeft="10dp"
            android:text="@string/write_article_select_job_text1"
            android:textSize="18dp" />

        <Spinner
            android:id="@+id/writeArticleJobSpinner1"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingLeft="10dp"></Spinner>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="10dp"
            android:drawableStart="@drawable/ic_domain_black_24dp"
            android:paddingLeft="10dp"
            android:text="@string/write_article_select_job_text2"
            android:textSize="18dp" />

        <Spinner
            android:id="@+id/writeArticleJobSpinner2"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingLeft="10dp"></Spinner>

        <EditText
            android:id="@+id/writeArticleContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:width="320dp"
            android:height="300dp"
            android:inputType="textMultiLine"
            android:background="@drawable/border"
            android:scrollbars="vertical"
            android:padding="20dp"
            android:gravity="top"/>

        <Button
            android:id="@+id/writeArticleBtn"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_gravity="right"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_button"
            android:text="@string/write_article_btn_string"
            android:textColor="#ffffff"
            android:textSize="20dp"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>